@@ -1,3 +1,5 @@
+from ftw.builder import Builder
+from ftw.builder import create
 from ftw.testbrowser import browsing
 from ftw.testbrowser.pages import statusmessages
 from opengever.testing import IntegrationTestCase
@@ -70,3 +72,44 @@ class TestProposalOverview(IntegrationTestCase):
             ['Excerpt', 'The Excerpt'],
         ]
         self.assertEqual(expected_listing, browser.css('table.listing').first.lists())
+
+    @browsing
+    def test_webactions_are_shown_in_proposal_overview(self, browser):
+        self.login(self.committee_responsible, browser)
+        create(Builder('webaction')
+               .titled(u'Action 1')
+               .having(order=5,
+                       display='action-buttons',
+                       icon_name="fa-helicopter"))
+
+        create(Builder('webaction')
+               .titled(u'Action 2')
+               .having(order=1,
+                       display='action-buttons',
+                       target_url="http://example.org/endpoint2"))
+
+        browser.open(self.submitted_proposal, view='tabbedview_view-overview')
+
+        webactions = browser.css('.webactions_buttons a.webaction_button')
+        self.assertEquals(['Action 2', 'Action 1'], webactions.text)
+
+        self.assertEqual(
+            map(lambda item: item.get("href"), webactions),
+            ['http://example.org/endpoint2', 'http://example.org/endpoint'])
+
+        self.assertEqual(
+            map(lambda item: item.get("class"), webactions),
+            ['webaction_button', 'webaction_button fa fa-helicopter'])
+
+    @browsing
+    def test_webactions_are_html_escaped(self, browser):
+        self.login(self.regular_user, browser)
+
+        create(Builder('webaction')
+               .titled(u'<bold>Action with HTML</bold>')
+               .having(display='action-buttons'))
+
+        browser.open(self.task, view='tabbedview_view-overview')
+
+        self.assertIn('&lt;bold&gt;Action with HTML&lt;/bold&gt;',
+                      browser.css('ul.webactions_buttons a').first.innerHTML)
