@@ -26,6 +26,7 @@ Changelog
 2019.1.2 (2019-03-07)
 ---------------------
 
+- Add webaction action-buttons for documents, tasks and proposals. [njohner]
 - Add webaction actions-menu items. [njohner]
 - Add webaction title-buttons. [njohner]
 - Add WebActionsProvider. [njohner]
